testing/macro-tests/tests/ui/generated_default_conflict.stderr
error: generated(insert = ...) cannot be combined with default = ...; default is a database/schema default
  --> tests/ui/generated_default_conflict.rs:24:21
   |
24 |             ident = "created_on_insert",
   |                     ^^^^^^^^^^^^^^^^^^^
